Add:     - JS :         - Ajout du fichier mains.js qui contient la logique du jeu     - Ajout de classe et D'id pour mieux modifier le Dom grace au JS.     - Ajout d'un style sur la classe active et un ::after apres le nom pour ajouter un point et reperer le joueur actuel.

--- a/SRC/CSS/main.css
+++ b/SRC/CSS/main.css
@@ -37,6 +37,17 @@ button {
     font-weight: 300;
 }
 
+.active .player-turn h2 {
+    font-weight: 500;
+}
+
+.active .player-turn h2::after {
+    content: "\2022";
+    position: absolute;
+    color: #EB4D4D;
+    
+}
+
 .player-turn h2 {
     font-size: 5rem;
     letter-spacing: 0.2rem;
@@ -136,4 +147,5 @@ button {
 
 button:hover p, button:hover h3 {
     font-weight: 600;
+    cursor: pointer;
 }
